--- a/LibraryDemo.DesktopClient/Views/LibraryView.xaml
+++ b/LibraryDemo.DesktopClient/Views/LibraryView.xaml
@@ -7,8 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="DarkSalmon">
-        <ListView Margin="100" Name="lvAuthors" ItemsSource="{Binding ListOfLibraries}"
-          SelectedItem="{Binding Path=SelectedLibrary}">
+        <ListView Margin="100" Name="lvAuthors" ItemsSource="{Binding ListOfLibraries}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name" Width="420" DisplayMemberBinding="{Binding Name}" />
