--- a/LibraryDemo.DesktopClient/Views/MainWindow.xaml
+++ b/LibraryDemo.DesktopClient/Views/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LibraryDemo.DesktopClient"
+        xmlns:local="clr-namespace:LibraryDemo.DesktopClient" xmlns:viewmodels="clr-namespace:LibraryDemo.DesktopClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d"
         Icon="\images\bookIcon.png"
         WindowState="Maximized"
