View all, by author and by library books functionality

--- a/LibraryDemo.DesktopClient/Views/BooksByAuthorView.xaml
+++ b/LibraryDemo.DesktopClient/Views/BooksByAuthorView.xaml
@@ -3,10 +3,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
+             xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views" xmlns:viewmodels="clr-namespace:LibraryDemo.DesktopClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:BooksByAuthorViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-            
+    <Grid Background="DarkSalmon">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Margin="20" Grid.Row="0" Orientation="Horizontal">
+            <TextBlock x:Name="txt" Text="Изберете автор: " FontSize="30" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <ComboBox Name="Authors" ItemsSource="{Binding Path= ListOfAuthors}" 
+                      Width="500" Height="30" HorizontalAlignment="Left"
+                      SelectedItem="{Binding Path=SAuthor}" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Rectangle Fill="{Binding Name}" Width="16" Height="16" Margin="0,2,5,2" />
+                            <TextBlock Text="{Binding Name}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Button Content="Търси" Command="{Binding Path=ShowCommand}" 
+                    FontSize ="20" VerticalAlignment="Center" Width="250" Height="30" HorizontalAlignment="Left"/>
+        </StackPanel>
+        <ContentControl Content="{Binding CurentView}" Grid.Row="1"/>
     </Grid>
 </UserControl>
