--- a/LibraryDemo.DesktopClient/Views/AddBookView.xaml
+++ b/LibraryDemo.DesktopClient/Views/AddBookView.xaml
@@ -6,7 +6,45 @@
              xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Aqua">
-            
+    <Grid  Background="DarkSalmon">
+        <StackPanel Margin="100">
+            <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Vertical">
+                <Label FontSize="20">Заглавие</Label>
+                <TextBox Text="{Binding Title}" Width="400" Height="50" FontSize="20"></TextBox>
+            </StackPanel>
+            <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Vertical">
+                <Label FontSize="20">Автор</Label>
+                <ComboBox Name="Authors" ItemsSource="{Binding Path= ListOfAuthors}" 
+                      Width="400" Height="50" HorizontalAlignment="Left"
+                      SelectedItem="{Binding Path=SAuthor}" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Name}" FontSize="20"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+            <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Vertical">
+                <Label FontSize="20">Цена</Label>
+                <TextBox Text="{Binding Price}" Width="400"  Height="50" FontSize="20"></TextBox>
+            </StackPanel>
+            <StackPanel Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" Orientation="Vertical">
+                <Label FontSize="20">Библиотека</Label>
+                <ComboBox Name="Libraries" ItemsSource="{Binding Path= ListOfLibraries}" 
+                      Width="400" Height="50" HorizontalAlignment="Left"
+                      SelectedItem="{Binding Path=SLibrary}" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Name}" FontSize="20"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+            <Button Width="400" Height="50" Content="Добави" FontSize="20" Command="{Binding Path=AddCommand}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
