--- a/LibraryDemo.DesktopClient/Views/DeleteBookView.xaml
+++ b/LibraryDemo.DesktopClient/Views/DeleteBookView.xaml
@@ -6,7 +6,23 @@
              xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="DarkGreen">
-            
+    <Grid Background="DarkSalmon">
+        <StackPanel Margin="20,50,0,0" Orientation="Horizontal">
+            <TextBlock Text="Изберете книга за изтриване: " FontSize="30"></TextBlock>
+            <ComboBox Name="Books" ItemsSource="{Binding Path= ListOfBooks}"
+                      VerticalAlignment="Top" Margin="0,10,0,0"
+                      Width="550" Height="30"
+                      SelectedItem="{Binding Path=SBook}" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Title}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Button Content="Изтрий" Command="{Binding Path=DeleteCommand}" Margin="0,10,0,0"  
+                    FontSize ="20" VerticalAlignment="Top" Width="250" Height="30" />
+        </StackPanel>
     </Grid>
 </UserControl>
