--- a/LibraryDemo.DesktopClient/Views/SearchBookView.xaml
+++ b/LibraryDemo.DesktopClient/Views/SearchBookView.xaml
@@ -6,7 +6,18 @@
              xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Firebrick">
-            
+    <Grid Background="DarkSalmon">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Margin="20" Grid.Row="0" Orientation="Horizontal">
+            <TextBlock x:Name="txt" Text="Въведете заглавие: " FontSize="30" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding KeyWord}" Background="WhiteSmoke" Height="30" Width="550" FontSize="20" />
+            <Button Content="Търси" Command="{Binding Path=SearchCommand}" 
+                    FontSize ="20" VerticalAlignment="Center" Width="250" Height="30" HorizontalAlignment="Left"/>
+        </StackPanel>
+        <ContentControl Content="{Binding CurentView}" Grid.Row="1"/>
     </Grid>
 </UserControl>
