--- a/LibraryDemo.DesktopClient/Views/BooksByAuthorView.xaml
+++ b/LibraryDemo.DesktopClient/Views/BooksByAuthorView.xaml
@@ -27,6 +27,7 @@
             </ComboBox>
             <Button Content="Търси" Command="{Binding Path=ShowCommand}" 
                     FontSize ="20" VerticalAlignment="Center" Width="250" Height="30" HorizontalAlignment="Left"/>
+            <TextBlock Text="{Binding ErrMasage}" Margin="10, 5, 0, 0" Height="auto" Width="auto" FontSize="20" HorizontalAlignment="Center"/>
         </StackPanel>
         <ContentControl Content="{Binding CurentView}" Grid.Row="1"/>
     </Grid>
