--- a/LibraryDemo.DesktopClient/Views/DeleteBookView.xaml
+++ b/LibraryDemo.DesktopClient/Views/DeleteBookView.xaml
@@ -23,6 +23,8 @@
             </ComboBox>
             <Button Content="Изтрий" Command="{Binding Path=DeleteCommand}" Margin="0,10,0,0"  
                     FontSize ="20" VerticalAlignment="Top" Width="250" Height="30" />
+            <TextBlock Text="{Binding ErrMasage}" Margin="10, 5, 0, 0" Height="auto" Width="auto" FontSize="20" HorizontalAlignment="Center"/>
         </StackPanel>
+        <ContentControl Content="{Binding CurentView}"/>
     </Grid>
 </UserControl>
