--- a/LibraryDemo.DesktopClient/Views/SearchBookView.xaml
+++ b/LibraryDemo.DesktopClient/Views/SearchBookView.xaml
@@ -17,6 +17,7 @@
             <TextBox Text="{Binding KeyWord}" Background="WhiteSmoke" Height="30" Width="550" FontSize="20" />
             <Button Content="Търси" Command="{Binding Path=SearchCommand}" 
                     FontSize ="20" VerticalAlignment="Center" Width="250" Height="30" HorizontalAlignment="Left"/>
+            <TextBlock Text="{Binding ErrMasage}" Margin="10, 5, 0, 0" Height="auto" Width="auto" FontSize="20" HorizontalAlignment="Center"/>
         </StackPanel>
         <ContentControl Content="{Binding CurentView}" Grid.Row="1"/>
     </Grid>
