--- a/LibraryDemo.DesktopClient/Views/BookView.xaml
+++ b/LibraryDemo.DesktopClient/Views/BookView.xaml
@@ -18,138 +18,107 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0">
-            <Grid>
+        <Grid  Grid.Column="0" Grid.Row="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="3*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" >
-                    <Image Source="\images\allBooks.png"  Height="187" Stretch="Fill" VerticalAlignment="Top" />
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Button x:Name ="AllBooks" Content = "{Binding AllBooksButtonContent}"
-                        Command="{Binding Path=AllBooksCommand}"
-                   VerticalAlignment="Top"
+                <Image Source="\images\allBooks.png" Grid.Row="0" Stretch="Fill" VerticalAlignment="Top" />
+                
+                <Button x:Name ="AllBooks" Grid.Row="1" Content = "{Binding AllBooksButtonContent}"
+                   Command="{Binding Path=AllBooksCommand}"
                    Foreground="Black"
                    Background="DarkSalmon"
                    HorizontalContentAlignment="Center"
                    FontSize="40"
                    Cursor="Hand"/>
-                </StackPanel>
             </Grid>
-        </StackPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="1">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-                <StackPanel Grid.Row="0" >
-                    <Image Source="\images\Author.jpg"  Height="187" Stretch="Fill" VerticalAlignment="Top" />
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Button x:Name ="BooksByAuthor" Content = "{Binding BooksByAuthorButtonContent}"
+        <Grid Grid.Column="0" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Image Source="\images\Author.jpg" Grid.Row="0" Stretch="Fill" VerticalAlignment="Top" />
+            
+            <Button x:Name ="BooksByAuthor" Grid.Row="1" Content = "{Binding BooksByAuthorButtonContent}"
                         Command="{Binding Path=BooksByAuthorCommand}"
                         HorizontalContentAlignment="Center"
                         Foreground="Black"
                         Background="DarkSalmon"
                         FontSize="40"
                         Cursor="Hand"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
+        </Grid>
 
-        <StackPanel Grid.Column="0" Grid.Row="2">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+        <Grid Grid.Column="0" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" >
-                    <Image Source="\images\Library.png"  Height="187" Stretch="Fill" VerticalAlignment="Top" />
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Button x:Name ="BooksByLibrary" Content = "{Binding BooksByLibraryButtonContent}"
+            <Image Source="\images\Library.png"  Grid.Row="0" Stretch="Fill" VerticalAlignment="Top" />
+            
+            <Button x:Name ="BooksByLibrary" Grid.Row="1" Content = "{Binding BooksByLibraryButtonContent}"
                          Command="{Binding Path=BooksByLibraryCommand}"
                          HorizontalContentAlignment="Center"
                          Foreground="Black"
                          Background="DarkSalmon"
                          FontSize="40"
                          Cursor="Hand"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
+        </Grid>
 
-        <StackPanel Grid.Column="1" Grid.Row="1">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" >
-                    <Image Source="\images\addBook.jpg"  Height="187" Stretch="Fill" VerticalAlignment="Top" />
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Button x:Name ="AddBook" Content = "{Binding AddBookButtonContent}"
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Image Source="\images\addBook.jpg"  Grid.Row="0" Stretch="Fill" VerticalAlignment="Top" />
+            
+            <Button x:Name ="AddBook" Grid.Row="1" Content = "{Binding AddBookButtonContent}"
                         Command="{Binding Path=AddBookCommand}"
                             HorizontalContentAlignment="Center"
                             Foreground="Black"
                             Background="DarkSalmon"
                             FontSize="40"
                             Cursor="Hand"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
+        </Grid>
 
-        <StackPanel Grid.Column="1" Grid.Row="0" >
-            <Grid >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="4*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+        <Grid Grid.Column="1" Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0">
-                    <Image Source="\images\search.jpg"  Height="187" Stretch="Fill"  VerticalAlignment="Top" />
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Button x:Name ="SearchBook" Content = "{Binding SearchBookButtonContent}"
+            <Image Source="\images\search.jpg"  Grid.Row="0" Stretch="Fill"  VerticalAlignment="Top" />
+            
+            <Button x:Name ="SearchBook" Grid.Row="1" Content = "{Binding SearchBookButtonContent}"
                         Command="{Binding Path=SearchBookCommand}"  
                         Foreground="Black"
                         Background="DarkSalmon"
                         HorizontalContentAlignment="Center"
                         FontSize="40"
                         Cursor="Hand"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
-
-        <StackPanel Grid.Column="1" Grid.Row="2">
-            <Grid >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="4*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-                <StackPanel Grid.Row="0">
-                    <Image Source="\images\delete.jfif"  Height="187" Stretch="Fill" VerticalAlignment="Top" />
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Button x:Name ="DeleteBook" Content = "{Binding DeleteBookButtonContent}"
+        </Grid>
+        
+        <Grid Grid.Column="1" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
+            <Image Source="\images\delete.jfif"  Grid.Row="0" Stretch="Fill" VerticalAlignment="Top" />
+            
+            <Button x:Name ="DeleteBook" Grid.Row="1" Content = "{Binding DeleteBookButtonContent}"
                         Command="{Binding Path=DeleteBookCommand}"
                             HorizontalContentAlignment="Center"
                             Foreground="Black"
                             Background="DarkSalmon"
                             FontSize="40"
                             Cursor="Hand"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
+        </Grid>
         
         <ContentControl Content="{Binding CurentView}" Grid.ColumnSpan="2" Grid.RowSpan="3"/>
     </Grid>
