--- a/LibraryDemo.DesktopClient/Views/DeleteView.xaml
+++ b/LibraryDemo.DesktopClient/Views/DeleteView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LibraryDemo.DesktopClient.Views.DeleteAuthorView"
+﻿<UserControl x:Class="LibraryDemo.DesktopClient.Views.DeleteView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,12 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="DarkSalmon">
-        <StackPanel Margin="20,50,0,0" Orientation="Horizontal">
-            <TextBlock Text="{Binding SelectToDeleteContent}" FontSize="30"></TextBlock>
-            <ComboBox ItemsSource="{Binding Path= ListOfAuthors}"
+        <StackPanel Margin="20,50,0,0" Orientation="Vertical">
+            <TextBlock Text="{Binding SelectToDeleteContent}" FontSize="30" HorizontalAlignment="Center"></TextBlock>
+            <ComboBox ItemsSource="{Binding Path= ListOfT}"
                       VerticalAlignment="Top" Margin="0,10,0,0"
                       Width="550" Height="30"
-                      SelectedItem="{Binding Path=SAuthor}" >
+                      SelectedItem="{Binding Path=Selected}" >
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
