--- a/LibraryDemo.DesktopClient/Views/MainWindow.xaml
+++ b/LibraryDemo.DesktopClient/Views/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Icon="\images\bookIcon.png"
         WindowState="Maximized"
-        Title="{Binding WindowTitle}" Height="450" Width="800">
+        MinHeight="768"
+        MinWidth="1366"
+        Title="{Binding WindowTitle}" Height="768" Width="1336">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
